syntax = "proto3";

package vbart.events_demo.inventory.api;

option csharp_namespace = "VBart.EventsDemo.Grpc";

import "google/protobuf/empty.proto";
import "value_objects.proto";

service InventoryService {
  rpc AddEngine(vbart.events_demo.inventory.value_objects.Engine) returns (vbart.events_demo.inventory.value_objects.Engine);
  rpc UpdateEngine(vbart.events_demo.inventory.value_objects.Engine) returns (vbart.events_demo.inventory.value_objects.Engine);
  rpc ListEngines(google.protobuf.Empty) returns (vbart.events_demo.inventory.value_objects.Engines);
  rpc RemoveEngine(vbart.events_demo.inventory.value_objects.Engine) returns (google.protobuf.Empty);


  rpc AddVehicle(vbart.events_demo.inventory.value_objects.Vehicle) returns (vbart.events_demo.inventory.value_objects.Vehicle);
  rpc UpdateVehicle(vbart.events_demo.inventory.value_objects.Vehicle) returns (vbart.events_demo.inventory.value_objects.Vehicle);
  rpc ListVehicles(google.protobuf.Empty) returns (vbart.events_demo.inventory.value_objects.Vehicles);
  rpc RemoveVehicle(vbart.events_demo.inventory.value_objects.Vehicle) returns (google.protobuf.Empty);
}